feat(react): implement reporting workspace
